--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apple-iphone-3d-landing-page",
+  "name": "Clone-Apple",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
